implemented Working GanttBurndownChart.